kubernetes/store/store_deployment._v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store
  namespace: production
spec:
  replicas: 2  # Number of pod replicas
  selector:
    matchLabels:
      version: "v1"
  template:
    spec:
      affinity:
        podAntiAffinity:
          # Ensures that the pods are not co-located on a single node
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - store
                topologyKey: kubernetes.io/hostname
              weight: 100
      containers:
        - name: store-app
          image: kamathadityaa/store-istio
          securityContext:
            runAsUser: 1000  # Run as non-root user for security
            runAsGroup: 3000
            allowPrivilegeEscalation: false
          resources:
            # Resource limits and requests
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            # Readiness probe to check if the service is ready to handle traffic
            httpGet:
              path: /management/health/readiness
              port: http
            initialDelaySeconds: 20
            periodSeconds: 15
            failureThreshold: 6
          livenessProbe:
            # Liveness probe to check if the service is alive and running
            httpGet:
              path: /management/health/liveness
              port: http
            initialDelaySeconds: 100
            periodSeconds: 10
            failureThreshold: 3
          lifecycle:
            # Lifecycle hook for graceful shutdown of container
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 10"]
