kubernetes/store/store_postgresql.yaml
# Deployment configuration for the PostgreSQL database used by the "store" service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-postgresql
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: store-postgresql
  template:
    metadata:
      labels:
        app: store-postgresql
      annotations:
        # Annotation to disable Istio sidecar injection for this pod
        sidecar.istio.io/inject: "false"
    spec:
      volumes:
        - name: data
          emptyDir: {}
      containers:
        - name: postgres
          image: postgres:14.2
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
              subPath: postgres
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
---
# Service configuration for the PostgreSQL database used by the "store" service
apiVersion: v1
kind: Service
metadata:
  name: store-postgresql
  namespace: production
spec:
  selector:
    # Selector to match pods with the label "app: store-postgresql"
    app: store-postgresql
  ports:
    - port: 5432
