kubernetes/store/store_service.yaml
# Service definition yaml for exposing store deployemnt as cluster Ip service.
apiVersion: v1
kind: Service
metadata:
  name: store
  namespace: production
  labels:
    app: store
spec:
  selector:
    app: store
  type: NodePort
  ports:
    - name: http  # Name of the port, useful for referencing.
      port: 80    # Port exposed on the Service.
      targetPort: 8080  # Port on the Pods to which traffic will be forwarded.
