kubernetes/store/store_destination_rule.yaml
# DestinationRule configuration for the store virtual-service in the production namespace

apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: store-destinationrule
  namespace: production
spec:
  host: store
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
    connectionPool:
      tcp:
        maxConnections: 30
        connectTimeout: 100ms
      http:
        http1MaxPendingRequests: 10
        http2MaxRequests: 100
        maxRequestsPerConnection: 10
        maxRetries: 5
    outlierDetection:
      consecutive5xxErrors: 5
      interval: 30s
      baseEjectionTime: 60s
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2 
      labels:
        version: v2
