kubernetes/store/store_networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-invoice-notification-to-store
  namespace: production
spec:
  podSelector:
    matchLabels:
      app: store
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: invoice
    - podSelector:
        matchLabels:
          app: notification
